decaf-compiler/samples/lex/program3.decaf.out

*** Error line 15.
  class Cow betsy;
  ^^^^^
*** syntax error

